themes/alpha/static/components/george_space_splash.css
.george-space-splash {
  z-index: 1;
  --portal-padding: 12px;
  @media (width > 50rem) {
    --portal-padding: 20px;
  }
  display: flex;
  position: relative;
  @media (width < 50rem) {
    flex-direction: column;
    align-items: center;
    margin-block-end: -2rem;
  }
  @media (width > 50rem) {
    justify-content: center;
    flex-direction: row;
    margin-block-end: -6rem;
  }

  .medium-circle-one,
  .medium-circle-two {
    position: absolute;
    height: 4rem;
    width: 4rem;
    border-radius: 100%;
    z-index: 4;
  }
  .small-circle {
    position: absolute;
    height: 3rem;
    width: 3rem;
    border-radius: 100%;
  }
  .tiny-circle {
    position: absolute;
    height: 2rem;
    width: 2rem;
    border-radius: 100%;
    z-index: 4;
  }

  .medium-circle-one {
    bottom: 6rem;
    left: -1rem;
  }
  .medium-circle-two {
    bottom: -2rem;
    left: 6rem;
  }
  .small-circle {
    display: none;
  }
  .tiny-circle.select-slide-1 {
    bottom: -1rem;
    left: 11rem;
  }
  .tiny-circle.select-slide-2 {
    bottom: -1rem;
    left: 14rem;
  }

  @media (width > 50rem) {
    .medium-circle-one {
      width: 4rem;
      height: 4rem;
      top: 8rem;
      left: 4rem;
    }
    .medium-circle-two {
      display: block;
      bottom: 0rem;
      left: 24rem;
    }
    .small-circle {
      display: block;
      top: 4rem;
      right: 9rem;
      z-index: 4;
    }
    .tiny-circle.select-slide-1 {
      bottom: 1rem;
      left: 29rem;
    }
    .tiny-circle.select-slide-2 {
      bottom: 1rem;
      left: 32rem;
    }
  }

  .top-left-box {
    position: relative;
    margin-block: 1rem;
    @media (width > 50rem) {
      margin-block: 3rem;
    }
    z-index: 3;
  }
  .rust-circle {
    padding: var(--portal-padding);
    background-color: var(--clr-rust);
    clip-path: circle(50%);
  }
  .picture-portal {
    width: 300px;
    height: 300px;
    @media (width > 50rem) {
      width: 400px;
      height: 400px;
    }
  }
  .orange-circle {
    padding: var(--portal-padding);
    height: 100%;
    width: 100%;
    background-color: var(--clr-orange);
    clip-path: circle(47%);
  }
  .george-picture {
    height: 100%;
    width: 100%;
  }
  .picture-portal img {
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    padding: var(--portal-padding);
    filter: grayscale(1);
  }
  .george-picture img {
    clip-path: circle(42%);
  }
  .space-picture img {
    position: absolute;
    clip-path: circle(42%);
    height: inherit;
    width: inherit;
  }
  .bottom-right-box {
    display: flex;
    margin-block-start: -4rem;
    margin-block-end: 2rem;
    margin-inline-start: 6rem;
    z-index: 4;
    @media (width > 50rem) {
      margin-block-start: 11rem;
      margin-inline-start: -1rem;
      align-items: center;
      z-index: 2;
    }
  }

  .text-circle {
    position: relative;
    height: 16rem;
    width: 16rem;
    clip-path: circle(50%);
    display: grid;
    place-content: center;
    background: var(--clr-blue);
    @media (width > 50rem) {
      height: 20rem;
      width: 20rem;
    }
  }

  .george-text,
  .space-text {
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
    display: grid;
    place-content: center;
    max-height: 100%
  }

  .george-text p,
  .space-text p {
    color: var(--clr-tan);
    background: var(--clr-blue);
    padding-inline: 1rem;
    font-size: 1.2rem;
    @media (width > 50rem) {
      font-size: 1.4rem;
    }
    text-align: center;
    max-width: 20ch;
  }

  .space-text {
    opacity: 0;
  }

  /* Buttons */
  button,
  button {
    height: inherit;
    width: inherit;
    padding-block: 0;
    border: 0;
    font: inherit;
    padding-inline: unset;
    color: unset;
    background-color: unset;
  }
  button:hover,
  button:hover {
    cursor: pointer;
  }
  button {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 6px;
  }
  &.running .play-pause .triangle,
  &:not(.running) .play-pause .bar {
    display:none;
  }
  &.running .play-pause .bar {
    display: block;
    height: 22px;
    width: 6px;
    background: var(--clr-white);
  }
  &:not(.running) .play-pause .triangle {
    display: block;
    height: 20px;
    width: 20px;
    background: var(--clr-white);
    clip-path: polygon(15% 0, 100% 50%, 15% 100%);
  }

  /* Button outlines */
  .play-pause,
  .select-slide-2 {
    outline: 2px solid transparent;
  }
  .select-slide-1 {
    outline: 2px solid var(--clr-tan);
  }
  .play-pause:hover,
  .select-slide-1:hover,
  .select-slide-2:hover,
  &.running .play-pause,
  &.showing-slide-1 .select-slide-1,
  &.showing-slide-2 .select-slide-2 {
    outline-color: var(--clr-tan);
  }

  /* Animations */
  .orange-circle {
    animation: 6s 1s transitionImage infinite alternate;
  }
  .george-text {
    animation: 6s 1s fadeText infinite alternate;
  }
  .space-text {
    animation: 6s 1s materializeText infinite alternate;
  }
  .small-circle {
    @media (width > 50rem) {
      animation: 6s 1s topMoveUp infinite alternate;
    }
  }
  .bottom-right-box {
    @media (width > 50rem) {
      animation: 6s 1s marginBlockStartMoveUp infinite alternate;
    }
  }
  .tiny-circle.select-slide-1 {
    animation: 6s 1s TanToTransparent infinite alternate;
  }
  .tiny-circle.select-slide-2 {
    animation: 6s 1s transparentToTan infinite alternate;
  }

  /* Animation state controls */
  &:not(.running) .animated {
    animation-play-state: paused;
  }
  &.running .animated {
    animation-play-state: running;
  }
  &.showing-slide-1 .animated {
    animation-duration: 0s;
  }
  &.showing-slide-2 .animated {
    animation-duration: 0s;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
  }
}

@keyframes transitionImage {
  0% { opacity: 1; }
  40% { opacity: 1; }
  60% { opacity: 0; }
  100% { opacity: 0; }
}

@keyframes fadeText {
  0% { opacity: 1; transform: translateY(0px); }
  40% { opacity: 1; transform: translateY(0px); }
  50% { opacity: 0; transform: translateY(0px); }
  100% { opacity: 0; transform: translateY(100%); }
}

@keyframes materializeText {
  0% { opacity: 0; transform: translateY(100%); }
  50% { opacity: 0; transform: translateY(0px); }
  60% { opacity: 1; transform: translateY(0px); }
  100% { opacity: 1; transform: translateY(0px); }
}

@keyframes topMoveUp {
  0% { top: 4rem; }
  40% { top: 4rem; }
  60% { top: 2rem; }
  100% { top: 2rem; }
}

@keyframes marginBlockStartMoveUp {
  0% { margin-block-start: 11rem; }
  40% { margin-block-start: 11rem; }
  60% { margin-block-start: -8rem; }
  100% { margin-block-start: -8rem; }
}

@keyframes transparentToTan {
  0% { outline-color: transparent; }
  40% { outline-color: transparent; }
  60% { outline-color: var(--clr-tan); }
  100% { outline-color: var(--clr-tan); }
}

@keyframes TanToTransparent {
  0% { outline-color: var(--clr-tan); }
  40% { outline-color: var(--clr-tan); }
  60% { outline-color: transparent; }
  100% { outline-color: transparent; }
}

